argocd-manifests/bj/k8s-cluster-prod-001/consul/consul-server/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consul-server
  namespace: consul
spec:
  serviceName: consul-server
  selector:
    matchLabels:
      app: consul-server
  replicas: 3
  template:
    metadata:
      labels:
        app: consul-server
    spec:
      containers:
        - name: consul-server
          image: harbor.freedom.org/docker.io/consul:1.9.1
          args:
               - "agent"
               - "-server"
               - "-bootstrap-expect=3"  # 在Consul启动时，指定最少预期的服务器数。如果超过这个数，Consul就会认为已经过了初始化阶段，可以进入正常运行。
               - "-ui"
               - "-data-dir=/consul/data"  # 存放raft/catalog/metadata/prepared_queryies数据
               - "-log-level=debug"
               - "-log-json"
               - "-log-file=/dev/stdout"
               - "-bind=0.0.0.0"
               - "-client=0.0.0.0"
               - "-datacenter=bj"
               - "-advertise=$(PODIP)"
               - "-retry-join=consul-server-0.consul-server.$(NAMESPACE).svc.cluster.local"
               - "-retry-join=consul-server-1.consul-server.$(NAMESPACE).svc.cluster.local"
               - "-retry-join=consul-server-2.consul-server.$(NAMESPACE).svc.cluster.local"
               - "-retry-join-wan=node01.consul.freedom.org"  # -retry-join-wan 多数据中心选项，各region加入到cvm部署的consul集群中。
               - "-retry-join-wan=node02.consul.freedom.org"
               - "-retry-join-wan=node03.consul.freedom.org"
               - "-domain=cluster.local"
               - "-disable-host-node-id"
          ports:
            - containerPort: 8500
              name: ui
            - containerPort: 8443
              name: https
            - containerPort: 8400
              name: rpc
            - containerPort: 8301
              name: serflan
            - containerPort: 8302
              name: serfwan
            - containerPort: 8600
              name: consuldns
            - containerPort: 8300
              name: server
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              port: 8500
              path: /
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 60
          livenessProbe:
            httpGet:
              port: 8500
              path: /
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: consul-server-data
              mountPath: /consul/data
      terminationGracePeriodSeconds: 10
      tolerations:
         # - key: node-role.kubernetes.io/master
         # 取消key的配置，这样只要存在NoSchedule的污点，就都可以做调度。
        - operator: Exists
          effect: NoSchedule
  volumeClaimTemplates:
    - metadata:
        name: consul-server-data
        annotations:
          volume.beta.kubernetes.io/storage-class: storageclass-nfs-infra
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10G
