argocd-manifests/bj/k8s-cluster-prod-001/consul/consul-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-server
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul-ui.k8s.bj.freedom.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: consul-server
                port:
                  number: 8500
